--- a/public/locales/es/navbar.json
+++ b/public/locales/es/navbar.json
@@ -4,7 +4,7 @@
     "News":"Novedades",
     "Contact":"Contacto",
     "Programs":"Programas",
-    "Colaborate":"Sumate",
+    "collaborate":"Sumate",
     "Home":"Inicio"
   }
 }
