--- a/public/locales/es/programs.json
+++ b/public/locales/es/programs.json
@@ -1,7 +1,7 @@
 {
     "main-title":"Conocé nuestros programas y actividades",
     "show-more":"ver más",
-    "colaborate-button":"Cómo Colaborar",
+    "collaborate-button":"Cómo Colaborar",
     "recreative-afternoons":{
         "title":"Tardes Recreativas",
         "desc":"Visitamos hogares de niños jugando y con actividades personalizadas, creando un momento de disfrute y encuentro entre voluntarios y niños.",
